[project]
name = "comfyui-kandinsky22"
description = "Nodes provide an option to combine prior and decoder models of Kandinsky 2.2."
version = "1.0.0"
license = "Apache License 2.0"
dependencies = ["accelerate==0.27.2", "diffusers @ git+https://github.com/huggingface/diffusers@31de879fb4530ad203dbdaef993404c924daf35d", "torch>=2.2.0"]

[project.urls]
Repository = "https://github.com/vsevolod-oparin/comfyui-kandinsky22"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "seva"
DisplayName = "comfyui-kandinsky22"
Icon = "https://raw.githubusercontent.com/vsevolod-oparin/comfyui-kandinsky22/main/pics/icon.jpg"